Updated mockito version to enable mocking with Java 25